# git-plugin

./: Cargo.toml  README.md  fluentci.toml
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
