[package]
authors = [
  "Tsiry Sandratraina <tsiry.sndr@fluentci.io>",
]
description = "This plugin set up git in your CI/CD Pipeline"
edition = "2021"
license = "MIT"
name = "git"
version = "0.1.0"

[lib]
crate-type = [
  "cdylib",
]

[dependencies]
anyhow = "1.0.82"
extism-pdk = "1.1.0"
fluentci-pdk = "0.1.9"
